@@ -6,8 +6,11 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
+import java.io.File;
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 
 public class GridComponent extends JComponent {
@@ -108,26 +111,24 @@ public class GridComponent extends JComponent {
         repaint();
     }
 
-    public void optionsButton(String option) throws IOException {
-        Path filePath = null;
+    public void optionsButton(String option) throws IOException, URISyntaxException {
+        File filePath = null;
+        Path p = null;
         switch (option) {
             case "Glider":
-                filePath = Path.of(
-                        "C:\\Users\\weizb\\IdeaProjects\\Weizberg-Game-of-Life-2024\\src\\main\\java\\weizberg\\gameoflife\\files\\glider");
+                p = Paths.get(ClassLoader.getSystemResource("glider").toURI());
                 break;
             case "Glider gun":
-                filePath = Path.of(
-                        "C:\\Users\\weizb\\IdeaProjects\\Weizberg-Game-of-Life-2024\\src\\main\\java\\weizberg\\gameoflife\\files\\gosper glider gun");
+                p = Paths.get(ClassLoader.getSystemResource("gosperGliderGun").toURI());
                 break;
             case "Spider":
-                filePath = Path.of(
-                        "C:\\Users\\weizb\\IdeaProjects\\Weizberg-Game-of-Life-2024\\src\\main\\java\\weizberg\\gameoflife\\files\\quadpole");
+                p = Paths.get(ClassLoader.getSystemResource("spider").toURI());
                 break;
 
             default:
                 throw new IllegalStateException("Unexpected value: " + option);
         }
-        RleParser rleParser = new RleParser(filePath, 300, 400);
+        RleParser rleParser = new RleParser(p, 300, 400);
         grid = rleParser.parse();
         repaint();
     }
